[tool.poetry]
name = "shobaleader-one"
version = "0.1.0"
description = "Flashing Lights"
authors = ["Sam Pikesley <sam.pikesley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
adafruit-circuitpython-neopixel = "^4.1.0"
"ruamel.yaml" = "^0.16.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.4"
mock = "^3.0.5"
pytest-random-order = "^1.0.4"
pytest-cov = "^2.8.1"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

