[tool.poetry]
name = "shobaleader-one"
version = "0.1.0"
description = "Flashing Lights"
authors = ["Sam Pikesley <sam.pikesley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
adafruit-circuitpython-neopixel = "^4.1.0"
"ruamel.yaml" = "^0.16.6"
"RPi.GPIO" = {version = "^0.7.0", optional = true}
rpi_ws281x = {version = "^4.2.3", optional = true}
flask = "^2.2.5"
Flask-API = "^2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.4"
mock = "^3.0.5"
pytest-random-order = "^1.0.4"
pytest-cov = "^2.8.1"
ipdb = "^0.12.3"
pylint = "^2.4.4"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[tool.poetry.extras]
RPi_GPIO = ["RPi.GPIO"]
rpi_ws281x = ["rpi-ws281x"]

[tool.coverage.report]
fail_under = 100
omit = ["/home/travis/virtualenv/*"]
exclude_lines = ["nocov", "if __name__ == .__main__.:"]
show_missing = true
ignore_errors = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
